--- a/package.json
+++ b/package.json
@@ -1,41 +1,20 @@
 {
   "name": "huddyfrontend",
-  "version": "0.0.0",
-  "dependencies": {},
+  "version": "0.1.0",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.8.1",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
-    "grunt-google-cdn": "^0.4.0",
-    "grunt-karma": "^0.10.1",
-    "grunt-newer": "^0.7.0",
-    "grunt-ng-annotate": "^0.4.0",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "^1.7.0",
-    "jasmine-core": "^2.1.3",
-    "jshint-stylish": "^0.2.0",
-    "karma": "^0.12.31",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "gulp": "^3.8.10",
+    "gulp-bower-files": "^0.2.7",
+    "gulp-concat": "^2.4.3",
+    "gulp-install": "^0.2.0",
+    "gulp-jade": "^0.11.0",
+    "gulp-jshint": "^1.9.0",
+    "gulp-stylus": "^1.3.4",
+    "gulp-uglify": "^1.0.2",
+    "gulp-watch": "^4.1.0",
+    "gulp-webserver": "^0.9.0",
+    "jshint-stylish": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "grunt test"
   }
 }
