--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "devDependencies": {
     "gulp": "^3.8.10",
-    "gulp-bower-files": "^0.2.7",
+    "gulp-angular-filesort": "^1.0.4",
     "gulp-concat": "^2.4.3",
+    "gulp-inject": "^1.1.1",
     "gulp-install": "^0.2.0",
     "gulp-jade": "^0.11.0",
     "gulp-jshint": "^1.9.0",
+    "gulp-livereload": "^3.6.0",
     "gulp-stylus": "^1.3.4",
     "gulp-uglify": "^1.0.2",
     "gulp-watch": "^4.1.0",
     "gulp-webserver": "^0.9.0",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "main-bower-files": "^2.5.0"
   },
   "engines": {
     "node": ">=0.10.0"
