--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "huddyfrontend",
   "version": "0.1.0",
   "devDependencies": {
+    "bower": "^1.3.12",
     "gulp": "^3.8.10",
     "gulp-angular-filesort": "^1.0.4",
     "gulp-concat": "^2.4.3",
